JSW Devsb/src/objects/Daily_Sales__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Summary</relationshipLabel>
        <relationshipName>Daily_Sales1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actuals_in_QTY_MT__c</fullName>
        <label>Actuals in QTY(MT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Formula__c</fullName>
        <formula>Plant__c +&apos;:&apos;+ Sales_Office_Description__c +&apos;:&apos;+  Account__r.Customer_Code__c +&apos;:&apos;+  TEXT(Commercial_Invoice_Date__c) +&apos;:&apos;+ Product_Group__c +&apos;:&apos;+  Distribution_Channel__c +&apos;:&apos;+  Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Invoice_Date__c</fullName>
        <label>Commercial Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <formula>Account__r.Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Code__c</fullName>
        <formula>Account__r.Sales_District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <formula>Account__r.Sales_District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE( MONTH(  Commercial_Invoice_Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;none&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Distrcit__c</fullName>
        <label>Sales Distrcit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_District_Description__c</fullName>
        <label>Sales District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Emplyee_Code__c</fullName>
        <formula>Account__r.Sales_Employee_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Emplyee Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Description__c</fullName>
        <label>Sales Office Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Account__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <formula>Account__r.Sales_Office__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Customer__c</fullName>
        <formula>Account__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type  of Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Text(YEAR(  Commercial_Invoice_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Daily Sales  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>